3.14.2
======
Jun 15, 2022
- Do nothing in foreach steps if there are no elements in input iteration

3.14.1
======
Jun 14, 2022
- Fix data file name in expanded CSV examples

3.14.0
======
Jun 14, 2022
- Introduce new setting to bind row data in outline examples tables to same named attributes in the current scope:
  - `gwen.auto.bind.tableData.outline.examples = true|false`
    - `true` (default) to bind table data to same named attributes in the current scope for each row
    - `false` to not bind table data to attributes in the current scope
- Introduce new setting to set console logging depth
  - `gwen.console.log.depth=number|infinity` (default is 1)
    - Accepts a number greater than 1 representing the step depth to log to
      - or `infinity` to log all depths
- Add total CSV record count to record descriptor suffix
  - examples: `1` becomes `1 of n` where `n` = total number of records)
- Allow applied function references to be used in if, while, or until conditionals
- Add Data annotation to CSV and table data binding steps and defer interpolation

3.13.6
======
Jun 5, 2022
- Add horizontal scrolling to tables in HTML reports

3.13.5
======
Jun 2, 2022
- Support DocString in javascript function application DSL

3.13.4
======
Jun 2, 2022
- Support masked data in system process DSLs

3.13.3
======
Jun 2, 2022
- Update tikaCore from v1.28.2 to v1.28.3

3.13.2
======
Jun 1, 2022
- Add overloaded DSLs:
  - `I execute unix system process "<process>"`
  - `I execute unix system process "<process>" delimited by "<delimiter>"`

3.13.1
======
Jun 1, 2022
- Do not allow quotes in if condition reference names

3.13.0
======
May 31, 2022
- Remove concatenation syntax in favor of interpolation/substitution
- Add line break between each status group in console report summary

3.12.3
======
May 30, 2022
- Update console summary report indenting

3.12.2
======
May 30, 2022
- Update console summary report to include feature name

3.12.1
======
May 25, 2022
- Update libs