@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2021 Branko Juric, Brady Wood
+ * Copyright 2014-2022 Branko Juric, Brady Wood
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -62,11 +62,11 @@ case class Scenario(
   }
 
   override val evalStatus: EvalStatus = {
-    // if (isOutline && examples.flatMap(_.scenarios).isEmpty) {
-    //   Pending
-    // } else {
+    if (isOutline && examples.flatMap(_.scenarios).isEmpty) {
+      Passed(0, abstained = true)
+    } else {
       EvalStatus(allSteps.map(_.evalStatus), ignoreSustained = !isStepDef)
-    //}
+    }
   }
 
   override def siblingsIn(parent: GwenNode): List[GwenNode] = {
