@@ -1,5 +1,5 @@
 /*
- * Copyright 2017-2021 Branko Juric, Brady Wood
+ * Copyright 2017-2022 Branko Juric, Brady Wood
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -79,14 +79,12 @@ object DataTable {
 
     val tableType = TableType.valueFor(headerType)
 
-    if (rawTable.isEmpty)
+    if (rawTable.isEmpty && headers.isEmpty)
       Errors.dataTableError(s"Data table expected for StepDef with @DataTable annotation")
 
     val table = if (tableType == TableType.vertical) rawTable.transpose else rawTable
 
-    if (headers.isEmpty && table.size < 2)
-      Errors.dataTableError(s"Table with header has no records")
-    if (headers.nonEmpty && headers.size != table.head.size)
+    if (headers.nonEmpty && table.nonEmpty && headers.size != table.head.size)
       Errors.dataTableError(
         s"""${table.head.size} names expected for data table but ${headers.size} specified: $tableType=\"${headers.mkString(",")}\"""")
 
