@@ -102,3 +102,11 @@ Feature: Number tables meta (for each)
           | 4   | 5    | 6   |
           | 100 | 101  | 110 |
      Then everything is "ok"
+
+  @StepDef
+  @ForEach
+  @DataTable(header="top")
+  @Context
+  Scenario: empty table with header only
+     Then z is "${item}"
+
