@@ -183,3 +183,9 @@ Feature: Number tables meta
           | 4   | 5    | 6   |
           | 100 | 101  | 110 |
      Then everything is "ok"
+
+  @StepDef
+  @DataTable
+  @Context
+  Scenario: empty number table should do nothing
+    Given z is "${number}" for each data record
