@@ -1,7 +1,8 @@
 3.14.2
 ======
-Jun 15, 2022
-- Do nothing in foreach steps if there are no elements in input iteration
+Jun 16, 2022
+- Do nothing in foreach steps if there are no elements in iteration
+- Do nothing in table steps if there are no rows of data
 
 3.14.1
 ======
